added some menu items

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>8085 Simulator</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
+		<div id="menu"></div>
+		<div id="project_explorer"></div>
+		<div id="editor"></div>
 		<script src="render.js"></script>
 	</body>
 </html>
