the thing doesnt move, also added gitignore

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>8085 Simulator</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div id="menu"></div>
-		<div id="project_explorer"></div>
-		<div id="editor"></div>
+		<div id="v_sep"></div>
+		<div id="container">
+			<div id="project_explorer"></div>
+			<div id="h_sep"></div>
+			<div id="editor"></div>
+		</div>
 		<script src="render.js"></script>
+		<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	</body>
 </html>
