--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 		<div id="v_sep"></div>
 		<div id="container">
 			<div id="project_explorer"></div>
-			<div id="h_sep"></div>
+			<div id="h_sep">dasdfadfsaf</div>
 			<div id="editor"></div>
 		</div>
+		<script>if (typeof module === 'object') {
+			window.module = module;
+			module = undefined;
+		}</script>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 		<script src="render.js"></script>
-		<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+		<script>if (window.module) module = window.module;</script>
 	</body>
 </html>
