the things are also the right size now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="v_sep"></div>
 		<div id="container">
 			<div id="project_explorer"></div>
-			<div id="h_sep">dasdfadfsaf</div>
+			<div id="h_sep"></div>
 			<div id="editor"></div>
 		</div>
 		<script>if (typeof module === 'object') {
