--- a/Memory Table/index.html
+++ b/Memory Table/index.html
@@ -6,13 +6,15 @@
     <!-- Required resources -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js.js"></script>
+    
     <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 
 <body>
     <!-- Page title -->
     <h2 id="pageTitle">Memory locations table test</h2>
+
+    <table><tbody id="testTable"></tbody></table>
 
     <!-- Table -->
     <div id="tableContainer">
@@ -67,6 +69,8 @@
         <button id="createTable">Create Table</button>
         <button id="showMemory">Show/hide loaded memory locations</button>
     </div>
+
+    <script type="text/javascript" src="Table.js"></script>
 </body>
 
 </html>
