made icons look a little neater

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<i class="material-icons">note_add</i>
 		<i class="material-icons">folder</i>
 		<i class="material-icons">save</i>
-		|
+		<span class="icon_sep">|</span>
 		<i class="material-icons">undo</i>
 		<i class="material-icons">redo</i>
-		|
-		<i id="start-button" class="material-icons">play_arrow</i>
+		<span class="icon_sep">|</span>
+		<i id="run" class="material-icons">play_arrow</i>
 	</div>
 	<div id="v_sep"></div>
 	<div id="container">
