--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>-->
 		<link rel="stylesheet" type="text/css" href="./node_modules/codemirror/theme/monokai.css">
-		<link rel="stylesheet" type="text/css" href="./node_modules/jquery-ui/themes/base/tabs.css">
+		<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/ui-darkness/jquery-ui.css">
 		<script src="render.js"></script>
 		<script type="text/javascript" src="Table.js"></script>
 		<!--<script>if (window.module) module = window.module;</script>-->
