Hide editor tab
- Hides editor tab when run clicked

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 			<div id="h_sep"></div>
 			<div id="tabs">
 				<ul>
-					<li><a href="#editor">Editor</a></li>
-					<li class="tableTab hidden"><a href="#tables">Memory Table</a></li>
-					<li class="tableTab hidden"><a href="#binaryTable">Binary Table</a></li>
+					<li class="tab"><a href="#editor">Editor</a></li>
+					<li class="tab hidden"><a href="#binaryTable">Reference Table</a></li>
+					<li class="tab hidden"><a href="#tables">Memory Table</a></li>
 				</ul>
 				
 				<!-- Text editor -->
