--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<div id="tabs">
 				<ul>
 					<li class="tab"><a href="#editor">Editor</a></li>
-					<li class="tab hidden"><a href="#binaryTable">Reference Table</a></li>
-					<li class="tab hidden"><a href="#tables">Memory Table</a></li>
+					<li class="tab"><a href="#binaryTable">Reference Table</a></li>
+					<li class="tab"><a href="#tables">Memory Table</a></li>
 				</ul>
 				
 				<!-- Text editor -->
