--- a/preferences.html
+++ b/preferences.html
@@ -82,7 +82,7 @@
 		</div>
 		<div>
 			<input class="colorPicker" type="color" id="seperatorColour" value="#ff0000">
-			<label for="seperatorColour">Seperator bar Colour:</label>
+			<label for="seperatorColour">Seperator Colour:</label>
 		</div>
 		<br />
 		<hr />
