Added conversion functions (dec/hex/bin)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 	<link rel="stylesheet" type="text/css" href="./node_modules/codemirror/theme/monokai.css">
 	<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/ui-darkness/jquery-ui.css">
 	<script src="render.js"></script>
+	<script src="8085_Commands.js"></script>
 	<script type="text/javascript" src="Table.js"></script>
 	<!--<script>if (window.module) module = window.module;</script>-->
 </body>
